--- a/slides/2021-05-21-patahene.md
+++ b/slides/2021-05-21-patahene.md
@@ -360,7 +360,7 @@ $$
 - **符号拡張** (sign extension)
   - より大きいビット長に変換する
   - 最上位ビットを空きビットに繰り返しコピーする
-- 例: 16 ビットの $2_{10}$ と $2_{10}$ をそれぞれ 32 ビットに符号拡張する
+- 例: 16 ビットの $2_{10}$ と $-2_{10}$ をそれぞれ 32 ビットに符号拡張する
   ```
                       0000 0000 0000 0010₂ =  2₁₀
                       ↓ 符号拡張
@@ -1280,6 +1280,10 @@ for (i = 0; i < a; i++)
   for (j = 0; j < b; j++)
     D[4 * j] = i + j;
 ```
+
+<small>変数 `a`, `b`, `i`, `j` はレジスタ `$s0`, `$s1`, `$t0`, `$t1`</small>
+<small>配列 `D` のベースアドレスはレジスタ `$s2`</small>
+<small>補足: 変数は多分すべて `int`</small>
 
 ---
 
